fix styles & missing `z-index`

--- a/packages/app/src/components/Layout/toolsBar/index.less
+++ b/packages/app/src/components/Layout/toolsBar/index.less
@@ -13,6 +13,8 @@
     height: 100dvh;
 
     padding: 10px;
+
+    z-index: 150;
 }
 
 .tools-bar {
@@ -65,7 +67,7 @@
 
             margin-bottom: 10px;
 
-            z-index: 50;
+            z-index: 150;
 
             -webkit-box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 var(--shadow-color);
             -moz-box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 var(--shadow-color);
